op-cross-culture-basics/lesson-04/main.scss
$text-font: 'Trebuchet MS';
$title-font: 'Helvetica';
$primary: #cc3366;
$primary-second: #339999;
$primary-light: #f0d4d4;
$text-title: #cc3366;
$left-pixel: clamp(50px, 14%, 126.5px);
body {
  margin: 0;
  padding: 0;
}
.html-lesson-wrapper {
  width: 100%;
  min-width: 360px;
  max-width: 892.75px;
  min-height: 960px;
  height: fit-content;
  overflow: hidden;
  position: relative;
  background-image: url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/other-programs-bg-header-magenta.svg'),
    url('https://lesson-materials.s3-ap-northeast-1.amazonaws.com/images/other-programs-footer-logo.svg');
  background-position: top, bottom;
  background-size: contain;
  background-repeat: no-repeat;
  font-family: $text-font;

  header {
    font-family: $title-font;
  }
  .b {
    font-weight: bold;
  }
  .i {
    font-family: italic;
  }
  .u {
    text-decoration: underline;
  }
  .program-rank {
    position: absolute;
    top: 40px;
    left: 48px;
    color: #ffffff;
    font-size: 0px;
    .type {
      padding: 3px 16px 3px 14px;
      background-color: $primary;
      font-size: clamp(7px, 1.8vw, 15px);
    }
    .level {
      padding: 3px 12px 3px 13px;
      background-color: $primary-second;
      font-size: clamp(7px, 1.8vw, 15px);
      .add-space {
        margin-left: clamp(5px, 2vw, 15px);
      }
    }
  }
  .line {
    margin: 0 12px;
  }
  .title {
    position: absolute;
    top: 80px;
    left: 48px;
    font-size: clamp(12px, 3vw, 27px);
  }
  .lesson-number {
    position: absolute;
    left: 92%;
    margin-top: 7.4%;
    font-size: clamp(7px, 1.8vw, 13px);
    color: #ffffff;
  }
  .row {
    display: flex;
    flex-direction: row;
  }
  .sub-text {
    font-family: $title-font !important;
    line-height: clamp(12px, 2.8vw, 22px);
    margin: 0 auto;
  }
  .section {
    position: absolute;
    left: -78px;
    color: $text-title;
    font-weight: bold;
    font-family: $title-font;
    top: 2px;
  }
  .divider {
    color: #d9d9d9;
    font-size: clamp(6px, 1.8vw, 15px);
    position: relative;
    left: 52%;
    &.d1 {
      margin-top: 50px;
    }
    &.d2 {
      margin-top: 50px;
    }
  }
  ul {
    margin: 3px 0px 0px 18px;
    padding: 0;
    line-height: clamp(12px, 3vw, 26px);
    li {
      padding-left: 8px;
    }
  }
  .see-content,
  .act-content,
  .try-content {
    position: relative;
    margin-left: $left-pixel;
    padding-left: 18.5px;
    padding-right: 42px;
    font-size: clamp(6px, 1.8vw, 15px);
  }
  .table {
    margin-top: 20px;
    width: 100%;
  }
  .speaker {
    white-space: nowrap;
    text-align: left;
    font-weight: bold;
    line-height: 1.8;
  }
  td {
    height: clamp(10px, 2.5vw, 30px);
    vertical-align: top;
  }
  .speaker-text {
    position: relative;
    left: clamp(15px, 4vw, 35px);
    line-height: 1.8;
    .underline {
      border-bottom: 1px solid black;
    }
  }
  // Words and Phrases Content
  .words-phrase-content {
    position: relative;
    margin-top: clamp(63px, 17.6%, 157px);
    padding: 2px 0px 0px 47px;
    height: fit-content;
    padding-bottom: clamp(10px, 4vw, 40px);
    padding-left: clamp(32px, 6vw, 47px);
    background: $primary-light;
    font-size: clamp(6px, 1.8vw, 15px);
    .section {
      margin-left: $left-pixel;
      line-height: 1.8em;
      margin-top: clamp(10px, 2.6vw, 18px) !important;
    }
    .pointers {
      margin-top: clamp(12px, 2.8vw, 20px) !important;
      margin-left: $left-pixel;
      .text-header {
        position: relative;
        left: -17px;
        margin-bottom: clamp(6px, 2vw, 20px);
      }
      .arrow-part {
        position: relative;
        &:before {
          content: '';
          position: absolute;
          left: -16px;
          top: 5px;
          width: 0;
          height: 0;
          border-left: 5px solid transparent;
          border-right: 5px solid transparent;
          border-top: 8px solid black;
          display: inline-block;
          vertical-align: middle;
        }
      }
    }
  }
  // See
  .see-content {
    margin-top: 36px;
    .text-convo {
      margin-top: clamp(6px, 1.5vw, 15px);
      margin-left: -2px;
    }
  }
  // Try
  .try-content {
    margin-top: 30px;
    ul {
      list-style-type: decimal;
    }
  }
  // Act
  .act-content {
    margin-top: 36px;
    height: fit-content;
    margin-bottom: clamp(50px, 13vw, 120px);
  }
  footer {
    color: #0c0c0c;
    font-size: clamp(4.5px, 1.1vw, 9px);
    position: absolute;
    width: fit-content;
    text-align: right;
    bottom: 43px;
    right: 6.2%;
    font-family: $title-font;
    max-width: 64%;
  }
}

@media screen and (max-width: 900px) {
  .html-lesson-wrapper {
    min-height: unset;
    .see-content {
      margin-top: clamp(22px, 3.8vw, 36px);
      .article {
        margin-bottom: clamp(20px, 3.7vw, 29px);
      }
    }
    .try-content {
      margin-top: clamp(20px, 3.7vw, 30px);
      padding-left: clamp(11px, 2.4vw, 18px);
      ul {
        margin-left: clamp(15px, 2.4vw, 18px);
      }
      li {
        padding-left: clamp(9px, 1.8vw, 13px);
      }
    }
    .act-content {
      margin-top: clamp(20px, 3.8vw, 36px);
    }
    footer {
      bottom: clamp(16px, 4.8vw, 43px);
      right: 5% !important;
    }
    .section {
      left: calc(-16% + 45px);
    }
    .section.words {
      left: calc(-14% + 48px);
    }
  }
}
@media screen and (max-width: 768px) {
  .html-lesson-wrapper {
    .program-rank {
      position: absolute;
      top: clamp(20px, 4vw, 40px);
      left: clamp(23px, 4vw, 48px);
    }
    .title {
      top: clamp(45px, 8.4vw, 80px);
      left: clamp(24px, 3.1vw, 55px);
    }
    .divider {
      &.d1,
      &.d2 {
        margin-top: clamp(18px, 3.4vw, 28px);
      }
    }
    .section {
      left: calc(-16% + 22px);
    }
    .section.words {
      left: calc(-14% + 24px);
    }
    .arrow-part {
      &:before {
        left: -3% !important;
        top: 0.6vw !important;
      }
    }
  }
}
@media screen and (max-width: 600px) {
  .html-lesson-wrapper {
    .type {
      padding: 2px 8px 2px 7px !important;
    }
    .level {
      padding: 2px 6px 2px 7px !important;
    }
    .line {
      margin: 0 6px;
      vertical-align: middle;
    }
    .arrow-part {
      &:before {
        border-left: 3.5px solid transparent !important;
        border-right: 3.5px solid transparent !important;
        border-top: 5.5px solid black !important;
      }
    }
  }
}
@media screen and (max-width: 460px) {
  .html-lesson-wrapper {
    .text-header {
      left: -12px !important;
    }
    .try-content .sub-text {
      margin-left: 10px;
    }
  }
}
@media screen and (max-width: 400px) {
  .html-lesson-wrapper {
    .text-header {
      left: -9px !important;

      .arrow-part {
        &:before {
          left: -4.5% !important;
          top: 0.6vw !important;
        }
      }
    }
  }
}

